Add new versions
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/pypi/simple/index.html
+++ b/pypi/simple/index.html
@@ -199,6 +199,7 @@
 <a href="reppy/">reppy</a><br/>
 <a href="beautifulsoup4/">beautifulsoup4</a><br/>
 <a href="drf-spectacular/">drf-spectacular</a><br/>
+<a href="packvers/">packvers</a><br/>
 <a href="ipython/">ipython</a><br/>
 <a href="stack-data/">stack-data</a><br/>
 <a href="platformdirs/">platformdirs</a><br/>
@@ -319,6 +320,7 @@
 <a href="backports-entry-points-selectable/">backports-entry-points-selectable</a><br/>
 <a href="setuptools-scm-git-archive/">setuptools-scm-git-archive</a><br/>
 <a href="ansible-core/">ansible-core</a><br/>
+<a href="gemfileparser2/">gemfileparser2</a><br/>
 <a href="jsonstreams/">jsonstreams</a><br/>
 <a href="pdfminer/">pdfminer</a><br/>
 <a href="backcall/">backcall</a><br/>
