--- a/pypi/simple/pip-requirements-parser/index.html
+++ b/pypi/simple/pip-requirements-parser/index.html
@@ -9,9 +9,11 @@
     <a href="https://thirdparty.aboutcode.org/pypi/pip-requirements-parser-31.0.1.tar.gz#sha256=028ec59a2e1939685d0ccb146e0e96f259c456bfa5571ac528ee3314841abfed">pip-requirements-parser-31.0.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pip-requirements-parser-31.1.0.tar.gz#sha256=b39be13873f6f4c4b657e2778996e25e0c412211b1f39e5a902372da646a51cc">pip-requirements-parser-31.1.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pip-requirements-parser-31.2.0.tar.gz#sha256=8c2a6f8e091ac2693824a5ef4e3b250226e34f74a20a91a87b9ab0714b47788f">pip-requirements-parser-31.2.0.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/pip-requirements-parser-32.0.1.tar.gz#sha256=b4fa3a7a0be38243123cf9d1f3518da10c51bdb165a2b2985566247f9155a7d3">pip-requirements-parser-32.0.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pip_requirements_parser-30.0.0-py3-none-any.whl#sha256=78d9ce0a5ca3d0b93fa7f9cc754e2b599cbd5603962358a072c2b109981710f3">pip_requirements_parser-30.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pip_requirements_parser-31.0.1-py3-none-any.whl#sha256=e7e3270a4ecf5a639b472802d45cd55d123bb2c8b08f35f0adea4f3a77336025">pip_requirements_parser-31.0.1-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pip_requirements_parser-31.1.0-py3-none-any.whl#sha256=54b493455f59e8a29f634cb7b8b2dbb65c0cda8d765c9aec64f0cc6fb3851559">pip_requirements_parser-31.1.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pip_requirements_parser-31.2.0-py3-none-any.whl#sha256=22fa213a987913385b2484d5698ecfa1d9cf4154978cdf929085548af55355b0">pip_requirements_parser-31.2.0-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/pip_requirements_parser-32.0.1-py3-none-any.whl#sha256=4659bc2a667783e7a15d190f6fccf8b2486685b6dba4c19c3876314769c57526">pip_requirements_parser-32.0.1-py3-none-any.whl</a><br/>
   </body>
 </html>
