--- a/pypi/simple/links.html
+++ b/pypi/simple/links.html
@@ -100,6 +100,8 @@
     <a href="https://thirdparty.aboutcode.org/pypi/attrs-21.4.0.tar.gz#sha256=626ba8234211db98e869df76230a137c4c40a12d72445c45d5f5b716f076e2fd">attrs-21.4.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/attrs-22.1.0-py2.py3-none-any.whl#sha256=86efa402f67bf2df34f51a335487cf46b1ec130d02b8d39fd248abfd30da551c">attrs-22.1.0-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/attrs-22.1.0.tar.gz#sha256=29adc2665447e5191d0e7c568fde78b21f9672d344281d0c6e1ab085429b22b6">attrs-22.1.0.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/attrs-22.2.0-py3-none-any.whl#sha256=29e95c7f6778868dbd49170f98f8818f78f3dc5e0e37c0b1f474e3561b240836">attrs-22.2.0-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/attrs-22.2.0.tar.gz#sha256=c9227bfc2f01993c03f68db37d1d15c9690188323c067c641f1a35ca58185f99">attrs-22.2.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/Babel-2.10.1-py3-none-any.whl#sha256=3f349e85ad3154559ac4930c3918247d319f21910d5ce4b25d439ed8693b98d2">Babel-2.10.1-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/Babel-2.10.1.tar.gz#sha256=98aeaca086133efb3e1e2aad0396987490c8425929ddbcfe0550184fdc54cd13">Babel-2.10.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/Babel-2.9.1-py2.py3-none-any.whl#sha256=ab49e12b91d937cd11f0b67cb259a57ab4ad2b59ac7a3b41d6c06c0ac5b0def9">Babel-2.9.1-py2.py3-none-any.whl</a><br/>
