--- a/pypi/simple/lxml/index.html
+++ b/pypi/simple/lxml/index.html
@@ -108,5 +108,9 @@
     <a href="https://thirdparty.aboutcode.org/pypi/lxml-4.9.1-cp39-cp39-manylinux_2_5_x86_64.manylinux1_x86_64.whl#sha256=079b68f197c796e42aa80b1f739f058dcee796dc725cc9a1be0cdb08fc45b000">lxml-4.9.1-cp39-cp39-manylinux_2_5_x86_64.manylinux1_x86_64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/lxml-4.9.1-cp39-cp39-win_amd64.whl#sha256=10d2017f9150248563bb579cd0d07c61c58da85c922b780060dcc9a3aa9f432d">lxml-4.9.1-cp39-cp39-win_amd64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/lxml-4.9.1.tar.gz#sha256=fe749b052bb7233fe5d072fcb549221a8cb1a16725c47c37e42b0b9cb3ff2c3f">lxml-4.9.1.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/lxml-4.9.2-cp311-cp311-macosx_10_15_universal2.whl#sha256=d6fdecef5de8c213bdcf9840682c86b533b63119a4d2def1636b363f6baf4c67">lxml-4.9.2-cp311-cp311-macosx_10_15_universal2.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/lxml-4.9.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_24_x86_64.whl#sha256=d6b430a9938a5a5d85fc107d852262ddcd48602c120e3dbb02137c83d212b380">lxml-4.9.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_24_x86_64.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/lxml-4.9.2-cp311-cp311-win_amd64.whl#sha256=3818b8e2c4b5148567e1b09ce739006acfaa44ce3156f8cbbc11062994b8e8dd">lxml-4.9.2-cp311-cp311-win_amd64.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/lxml-4.9.2.tar.gz#sha256=2455cfaeb7ac70338b3257f41e21f0724f4b5b0c0e7702da67ee6c3640835b67">lxml-4.9.2.tar.gz</a><br/>
   </body>
 </html>
