--- a/pypi/simple/markupsafe/index.html
+++ b/pypi/simple/markupsafe/index.html
@@ -93,5 +93,10 @@
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.1.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl#sha256=56442863ed2b06d19c37f94d999035e15ee982988920e12a5b4ba29b62ad1f77">MarkupSafe-2.1.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.1.1-cp39-cp39-win_amd64.whl#sha256=46d00d6cfecdde84d40e572d63735ef81423ad31184100411e6e3388d405e247">MarkupSafe-2.1.1-cp39-cp39-win_amd64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.1.1.tar.gz#sha256=7f91197cc9e48f989d12e4e6fbc46495c446636dfc81b9ccf50bb0ec74b91d4b">MarkupSafe-2.1.1.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.1.2-cp311-cp311-macosx_10_9_universal2.whl#sha256=2ec4f2d48ae59bbb9d1f9d7efb9236ab81429a764dedca114f5fdabbc3788013">MarkupSafe-2.1.2-cp311-cp311-macosx_10_9_universal2.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.1.2-cp311-cp311-macosx_10_9_x86_64.whl#sha256=608e7073dfa9e38a85d38474c082d4281f4ce276ac0010224eaba11e929dd53a">MarkupSafe-2.1.2-cp311-cp311-macosx_10_9_x86_64.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.1.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl#sha256=f2bfb563d0211ce16b63c7cb9395d2c682a23187f54c3d79bfec33e6705473c6">MarkupSafe-2.1.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.1.2-cp311-cp311-win_amd64.whl#sha256=e55e40ff0cc8cc5c07996915ad367fa47da6b3fc091fdadca7f5403239c5fec3">MarkupSafe-2.1.2-cp311-cp311-win_amd64.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.1.2.tar.gz#sha256=abcabc8c2b26036d62d4c746381a6f7cf60aafcc653198ad678306986b09450d">MarkupSafe-2.1.2.tar.gz</a><br/>
   </body>
 </html>
