--- a/pypi/simple/typecode/index.html
+++ b/pypi/simple/typecode/index.html
@@ -21,5 +21,7 @@
     <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.6.1.tar.gz#sha256=d3a82859df5607c900972e08e1bca31e3fe2daed37afd1b8231cad2ef613d8d6">typecode-21.6.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/typecode-30.0.0-py3-none-any.whl#sha256=aa55b36c2b62c8d925df71b7c1184b8e85bc29ae4d4e21d1884a5afcc554206e">typecode-30.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/typecode-30.0.0.tar.gz#sha256=a5118b53fc73410a8364c22caead45cbb560188a458e71eda663bec8beede20f">typecode-30.0.0.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-30.0.1-py3-none-any.whl#sha256=05ccbacf89a51ec0451a5b04ad2835c94a9a82c24b5d0b16670208d4eaabe0c1">typecode-30.0.1-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-30.0.1.tar.gz#sha256=1a57394224d5afffdebb299e353c4637e15568e11ae9c5311c6c86a3d6d0ac97">typecode-30.0.1.tar.gz</a><br/>
   </body>
 </html>
