--- a/pypi/simple/license-expression/index.html
+++ b/pypi/simple/license-expression/index.html
@@ -8,8 +8,12 @@
     <a href="https://thirdparty.aboutcode.org/pypi/license-expression-1.2.tar.gz#sha256=7960e1dfdf20d127e75ead931476f2b5c7556df05b117a73880b22ade17d1abc">license-expression-1.2.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/license-expression-21.6.14.tar.gz#sha256=9de87a427c9a449eee7913472fb9ed03b63036295547369fdbf95f76a8b924b2">license-expression-21.6.14.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/license-expression-30.0.0.tar.gz#sha256=ad638292aa8493f84354909b517922cb823582c2ce2c4d880e42544a86bea8dd">license-expression-30.0.0.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/license-expression-30.1.0.tar.gz#sha256=943b1d2cde251bd30a166b509f78990fdd060be9750f3f1a324571e804857a53">license-expression-30.1.0.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/license-expression-30.1.1.tar.gz#sha256=42375df653ad85e6f5b4b0385138b2dbea1f5d66360783d8625c3e4f97f11f0c">license-expression-30.1.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/license_expression-1.2-py2.py3-none-any.whl#sha256=6d97906380cecfc758a77f6d38c6760f2afade7e83d2b8295e234fe21f486fb8">license_expression-1.2-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/license_expression-21.6.14-py3-none-any.whl#sha256=324246eed8e138b4139fefdc0e9dc4161d5075e3929e56983966d37298dca30e">license_expression-21.6.14-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/license_expression-30.0.0-py3-none-any.whl#sha256=e95325110110eb2b7539ee7773b97a0724d5371ec563cc718c8cac0e38cc40cc">license_expression-30.0.0-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/license_expression-30.1.0-py3-none-any.whl#sha256=02c48c802b8f001c8b7bc8f3b9cf6a40e88ef95a897b0ff2c05f74c69855a492">license_expression-30.1.0-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/license_expression-30.1.1-py3-none-any.whl#sha256=8d7e5e2de0d04fc104a4f952c440e8f08a5ba63480a0dad015b294770b7e58ec">license_expression-30.1.1-py3-none-any.whl</a><br/>
   </body>
 </html>
