Add pymaven-patch 0.3.2
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/pypi/simple/links.html
+++ b/pypi/simple/links.html
@@ -2146,8 +2146,10 @@
     <a href="https://thirdparty.aboutcode.org/pypi/PyJWT-2.3.0.tar.gz#sha256=b888b4d56f06f6dcd777210c334e69c737be74755d3e5e9ee3fe67dc18a0ee41">PyJWT-2.3.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pymaven-patch-0.2.9.tar.gz#sha256=a247eb10474838e24dbddfdb73e97c8b8e139bc23c2ea983a2934e36c32e8478">pymaven-patch-0.2.9.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pymaven-patch-0.3.0.tar.gz#sha256=d55b29bd4aeef3510904a12885eb6856b5bd48f3e29925a123461429f9ad85c0">pymaven-patch-0.3.0.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/pymaven-patch-0.3.2.tar.gz#sha256=0cf7c93e89f01f0408eb656eec58cb4a228c95e03b3d47cb73d31f899055cd50">pymaven-patch-0.3.2.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pymaven_patch-0.2.9-py2.py3-none-any.whl#sha256=a489c00257da1cc6f2d4de2444d7a115a17523a9751cad60d4d36e3f53c3503f">pymaven_patch-0.2.9-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pymaven_patch-0.3.0-py2.py3-none-any.whl#sha256=db031d93aeff14703fbae6f5b4bca634088c15047b811e093e73e5ab77ffdb18">pymaven_patch-0.3.0-py2.py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/pymaven_patch-0.3.2-py3-none-any.whl#sha256=29a67d508e5d7a55c4359435e009ab87217ceb604a48caeb7b5b7d26b3099f65">pymaven_patch-0.3.2-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/PyNaCl-1.4.0-cp35-abi3-macosx_10_10_x86_64.whl#sha256=757250ddb3bff1eecd7e41e65f7f833a8405fede0194319f87899690624f2122">PyNaCl-1.4.0-cp35-abi3-macosx_10_10_x86_64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/PyNaCl-1.4.0-cp35-abi3-manylinux1_x86_64.whl#sha256=30f9b96db44e09b3304f9ea95079b1b7316b2b4f3744fe3aaecccd95d547063d">PyNaCl-1.4.0-cp35-abi3-manylinux1_x86_64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/PyNaCl-1.4.0-cp35-abi3-win_amd64.whl#sha256=c914f78da4953b33d4685e3cdc7ce63401247a21425c16a39760e282075ac4a6">PyNaCl-1.4.0-cp35-abi3-win_amd64.whl</a><br/>
