--- a/pypi/simple/pymaven-patch/index.html
+++ b/pypi/simple/pymaven-patch/index.html
@@ -7,7 +7,9 @@
   <body>
     <a href="https://thirdparty.aboutcode.org/pypi/pymaven-patch-0.2.9.tar.gz#sha256=a247eb10474838e24dbddfdb73e97c8b8e139bc23c2ea983a2934e36c32e8478">pymaven-patch-0.2.9.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pymaven-patch-0.3.0.tar.gz#sha256=d55b29bd4aeef3510904a12885eb6856b5bd48f3e29925a123461429f9ad85c0">pymaven-patch-0.3.0.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/pymaven-patch-0.3.2.tar.gz#sha256=0cf7c93e89f01f0408eb656eec58cb4a228c95e03b3d47cb73d31f899055cd50">pymaven-patch-0.3.2.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pymaven_patch-0.2.9-py2.py3-none-any.whl#sha256=a489c00257da1cc6f2d4de2444d7a115a17523a9751cad60d4d36e3f53c3503f">pymaven_patch-0.2.9-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pymaven_patch-0.3.0-py2.py3-none-any.whl#sha256=db031d93aeff14703fbae6f5b4bca634088c15047b811e093e73e5ab77ffdb18">pymaven_patch-0.3.0-py2.py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/pymaven_patch-0.3.2-py3-none-any.whl#sha256=29a67d508e5d7a55c4359435e009ab87217ceb604a48caeb7b5b7d26b3099f65">pymaven_patch-0.3.2-py3-none-any.whl</a><br/>
   </body>
 </html>
