Add beartype from spdx-tools requirements
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/pypi/simple/index.html
+++ b/pypi/simple/index.html
@@ -310,6 +310,7 @@
 <a href="imperfect/">imperfect</a><br/>
 <a href="django-environ/">django-environ</a><br/>
 <a href="doc8/">doc8</a><br/>
+<a href="beartype/">beartype</a><br/>
 <a href="docopt/">docopt</a><br/>
 <a href="click-repl/">click-repl</a><br/>
 <a href="qrcode/">qrcode</a><br/>
