Add dependencies from spdx-tools requirements
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/pypi/simple/index.html
+++ b/pypi/simple/index.html
@@ -220,8 +220,8 @@
 <a href="pefile/">pefile</a><br/>
 <a href="websocket-client/">websocket-client</a><br/>
 <a href="charset-normalizer/">charset-normalizer</a><br/>
-<a href="django-sendfile/">django-sendfile</a><br/>
 <a href="semantic-version/">semantic-version</a><br/>
+<a href="django-sendfile/">django-sendfile</a><br/>
 <a href="rpm-inspector-rpm/">rpm-inspector-rpm</a><br/>
 <a href="saneyaml/">saneyaml</a><br/>
 <a href="yarl/">yarl</a><br/>
@@ -299,6 +299,7 @@
 <a href="fabric3/">fabric3</a><br/>
 <a href="vine/">vine</a><br/>
 <a href="itypes/">itypes</a><br/>
+<a href="uritools/">uritools</a><br/>
 <a href="requests-oauthlib/">requests-oauthlib</a><br/>
 <a href="dockerpty/">dockerpty</a><br/>
 <a href="docker-compose/">docker-compose</a><br/>
