--- a/pypi/simple/links.html
+++ b/pypi/simple/links.html
@@ -2612,6 +2612,8 @@
     <a href="https://thirdparty.aboutcode.org/pypi/selenium-3.141.0-py2.py3-none-any.whl#sha256=2d7131d7bc5a5b99a2d9b04aaf2612c411b03b8ca1b1ee8d3de5845a9be2cb3c">selenium-3.141.0-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/selenium-3.141.0.tar.gz#sha256=deaf32b60ad91a4611b98d8002757f29e6f2c2d5fcaf202e1c9ad06d6772300d">selenium-3.141.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/selenium-4.1.5-py3-none-any.whl#sha256=866b6dd6c459210662bff922ee7c33162d21920fbf6811e8e5a52be3866a687f">selenium-4.1.5-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/semantic_version-2.10.0-py2.py3-none-any.whl#sha256=de78a3b8e0feda74cabc54aab2da702113e33ac9d9eb9d2389bcf1f58b7d9177">semantic_version-2.10.0-py2.py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/semantic_version-2.10.0.tar.gz#sha256=bdabb6d336998cbb378d4b9db3a4b56a1e3235701dc05ea2690d9a997ed5041c">semantic_version-2.10.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/semantic_version-2.8.5-py2.py3-none-any.whl#sha256=45e4b32ee9d6d70ba5f440ec8cc5221074c7f4b0e8918bdab748cc37912440a9">semantic_version-2.8.5-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/semantic_version-2.8.5.tar.gz#sha256=d2cb2de0558762934679b9a104e82eca7af448c9f4974d1f3eeccff651df8a54">semantic_version-2.8.5.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/semantic_version-2.9.0-py2.py3-none-any.whl#sha256=db2504ab37902dd2c9876ece53567aa43a5b2a417fbe188097b2048fff46da3d">semantic_version-2.9.0-py2.py3-none-any.whl</a><br/>
@@ -2901,6 +2903,8 @@
     <a href="https://thirdparty.aboutcode.org/pypi/uritemplate-3.0.1.tar.gz#sha256=5af8ad10cec94f215e3f48112de2022e1d5a37ed427fbd88652fa908f2ab7cae">uritemplate-3.0.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/uritemplate-4.1.1-py2.py3-none-any.whl#sha256=830c08b8d99bdd312ea4ead05994a38e8936266f84b9a7878232db50b044e02e">uritemplate-4.1.1-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/uritemplate-4.1.1.tar.gz#sha256=4346edfc5c3b79f694bccd6d6099a322bbeb628dbf2cd86eea55a456ce5124f0">uritemplate-4.1.1.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/uritools-4.0.2-py3-none-any.whl#sha256=607b15eae1e7b69a120f463a7d98f91a56671e1ab92aae13f8e1f25c017fe60e">uritools-4.0.2-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/uritools-4.0.2.tar.gz#sha256=04df2b787d0eb76200e8319382a03562fbfe4741fd66c15506b08d3b8211d573">uritools-4.0.2.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/url-0.4.2-cp36-cp36m-linux_x86_64.whl#sha256=9640631de0759ff967027992ecf9aa9299c4ebed867f193615e72989c0ee62fb">url-0.4.2-cp36-cp36m-linux_x86_64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/url-0.4.2.tar.gz#sha256=8c6e4a117bfc15664319d8babca016b60dcd84c158729c1fbd309609083697b0">url-0.4.2.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/urllib3-1.22-py2.py3-none-any.whl#sha256=06330f386d6e4b195fbfc736b297f58c5a892e4440e54d294d7004e3a9bbea1b">urllib3-1.22-py2.py3-none-any.whl</a><br/>
