--- a/pypi/simple/semantic-version/index.html
+++ b/pypi/simple/semantic-version/index.html
@@ -5,6 +5,8 @@
     <title>Links for semantic-version</title>
   </head>
   <body>
+    <a href="https://thirdparty.aboutcode.org/pypi/semantic_version-2.10.0-py2.py3-none-any.whl#sha256=de78a3b8e0feda74cabc54aab2da702113e33ac9d9eb9d2389bcf1f58b7d9177">semantic_version-2.10.0-py2.py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/semantic_version-2.10.0.tar.gz#sha256=bdabb6d336998cbb378d4b9db3a4b56a1e3235701dc05ea2690d9a997ed5041c">semantic_version-2.10.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/semantic_version-2.8.5-py2.py3-none-any.whl#sha256=45e4b32ee9d6d70ba5f440ec8cc5221074c7f4b0e8918bdab748cc37912440a9">semantic_version-2.8.5-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/semantic_version-2.8.5.tar.gz#sha256=d2cb2de0558762934679b9a104e82eca7af448c9f4974d1f3eeccff651df8a54">semantic_version-2.8.5.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/semantic_version-2.9.0-py2.py3-none-any.whl#sha256=db2504ab37902dd2c9876ece53567aa43a5b2a417fbe188097b2048fff46da3d">semantic_version-2.9.0-py2.py3-none-any.whl</a><br/>
